Add: - "net.vulkanmod.config.plugin" added to plugin class loader - shaders fetching in the volcanic's shader menu